[package]
name = "cmformat-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.5", features = ["derive"] }
convert_case = "0.6.0"
format = "0.2.4"
logos = "0.13.0"
regex = "1.9.5"
